# openenv-email-triage

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.txt  HFTOKEN.txt  MANIFEST.in  README.md  README.md.txt  app.py  fix_toml.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  requirements.txt.txt  train_email.py
.claude/agents/: docs-updater.md
.claude/docs/: REPO_WALKTHROUGH.md
.claude/hooks/: after-docs-updater.sh  ci-wait.sh  install.sh  lint.sh  test.sh
.claude/skills/generate-openenv-env/: SKILL.md
.claude/skills/hf-space-recovery/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/watch-pr/: SKILL.md
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: auto-bump-version.yml  deploy-hf-env.yml  docker-build.yml  docs.yml  manage-hf-collection.yml  publish-pypi-core.yml  test.yml
docs/: Makefile  README.md
docs/source/: auto_discovery.md  cli.md  conf.py  core.md  environments.md  index.md
docs/source/_static/: versions.json
docs/source/environments/: atari.md  browsergym.md  calendar.md  carla.md  chat.md  chess.md  coding.md  connect4.md  dipg.md  dm_control.md  echo.md  finqa.md  finrl.md  git.md  grid_world.md  julia.md  kernrl.md  maze.md  openapp.md  openspiel.md  reasoning_gym.md  repl.md  snake.md  sumo.md  tbench2.md  textarena.md  unity.md  websearch.md  wildfire.md
docs/source/getting_started/: README.rst  contributing-envs.md  environment-builder.md  plot_01_introduction_quickstart.py  plot_02_using_environments.py  plot_03_building_environments.py
docs/source/tutorials/: index.md  openenv-tutorial.md  rl-training-2048.md
envs/atari_env/: client.py  models.py  pyproject.toml
envs/atari_env/server/: Dockerfile  app.py  atari_environment.py
envs/browsergym_env/: client.py  models.py  pyproject.toml
envs/browsergym_env/server/: Dockerfile  app.py  browsergym_environment.py
envs/calendar_env/: Dockerfile  __init__.py  client.py  models.py
envs/carla_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
envs/carla_env/server/: Dockerfile  Dockerfile.real  __init__.py  app.py  carla_environment.py  logging.py  requirements.txt  rubrics.py
envs/carla_env/server/benchmark_scenarios/: __init__.py  action_bias.py  base.py  free_roam.py  maze.py  shared.py  trolley_micro.py
envs/carla_env/server/carla_agents/: LICENSE  README.md
envs/carla_env/server/carla_agents/navigation/: basic_agent.py  behavior_agent.py  behavior_types.py  controller.py  global_route_planner.py  local_planner.py
envs/carla_env/server/carla_agents/tools/: misc.py
envs/carla_env/server/data/: __init__.py  trolley_micro_benchmarks.json
envs/chat_env/: client.py  models.py  pyproject.toml
envs/chess_env/: models.py  pyproject.toml
envs/chess_env/server/: Dockerfile  chess_environment.py  rubrics.py
envs/coding_env/: pyproject.toml
envs/connect4_env/: README.md  __init__.py  client.py  models.py  pyproject.toml
envs/connect4_env/server/: Dockerfile  app.py  connect4_environment.py
envs/dipg_safety_env/: client.py  models.py  pyproject.toml
envs/dipg_safety_env/data/: sample_dataset.jsonl
envs/dipg_safety_env/server/: Dockerfile  app.py  dipg_environment.py  requirements.txt
envs/dm_control_env/: __init__.py
envs/echo_env/: __init__.py  pyproject.toml
envs/finqa_env/: __init__.py  pyproject.toml
envs/finrl_env/: __init__.py  client.py  models.py  pyproject.toml
envs/finrl_env/server/: Dockerfile  app.py  finrl_environment.py
envs/git_env/: models.py  pyproject.toml
envs/git_env/server/: Dockerfile  app.py  git_task_environment.py
envs/grid_world_env/: __init__.py  client.py  models.py  pyproject.toml
envs/julia_env/: __init__.py  pyproject.toml
envs/kernrl/: client.py  models.py  pyproject.toml
envs/maze_env/: client.py  models.py  pyproject.toml
envs/openapp_env/: __init__.py  client.py  models.py
envs/openspiel_env/: client.py  models.py  pyproject.toml
envs/reasoning_gym_env/: client.py  models.py  pyproject.toml
envs/repl_env/: README.md  __init__.py  client.py  local.py  models.py  prompts.py  pyproject.toml  recursive_backends.py  recursive_controller.py  rubrics.py  runner.py
envs/snake_env/: client.py  models.py  pyproject.toml
envs/sumo_rl_env/: client.py  models.py  pyproject.toml
envs/sumo_rl_env/server/: Dockerfile  app.py  sumo_environment.py
envs/tbench2_env/: client.py  pyproject.toml
envs/textarena_env/: __init__.py  models.py  pyproject.toml
envs/unity_env/: client.py
envs/websearch_env/: client.py  models.py  pyproject.toml
envs/wildfire_env/: README.md  __init__.py  client.py  models.py
examples/: repl_oolong_simple.py
examples/carla_env/: README.md  autopilot_navigation.py  carla_escape_inference.py  config.py  free_roam_navigation.py  llm_clients.py  maze_navigation.py  requirements.txt  rubric_autopilot_example.py  trolley_problems.py
scripts/: manage_hf_collection.py  prepare_hf_deployment.sh  test-docker-builds.sh  verify_private_spaces.py
server/: app.py
tests/core/: test_llm_client.py  test_mode_selection.py  test_package_version.py  test_production_mode_mcp.py  test_production_mode_routes.py  test_simulation_mode_preserves_api.py  test_types_and_enums.py  test_web_interface.py
tests/envs/: test_auto_env.py  test_browsergym_environment.py  test_carla_environment.py  test_connect4_env.py  test_dipg_client.py  test_dipg_environment.py  test_dipg_reward_functions.py  test_discovery.py  test_finqa_environment.py  test_grid_world.py  test_maze_environment.py  test_openspiel_environment.py  test_python_codeact_reset.py  test_python_codeact_rewards.py  test_reasoning_gym_environment.py  test_repl_env.py  test_tbench2_env.py  test_textarena_environment.py  test_websearch_environment.py  test_websockets.py
tests/scripts/: test_manage_hf_collection.py  test_prepare_hf_deployment.py  test_verify_private_spaces.py
tests/test_cli/: test_fork.py  test_init.py  test_main.py  test_push.py  test_skills.py  test_validate.py
tests/test_core/: test_generic_client.py
tutorial/examples/: repl_with_llm.py
(+244 files in other folders)
