# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-atari-env"
version = "0.1.0"
description = "Atari Environment for OpenEnv - Atari 2600 games via ALE"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
    "gymnasium>=0.29.0",
    "ale-py>=0.8.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "atari_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["atari_env", "atari_env.server"]
package-dir = { "atari_env" = ".", "atari_env.server" = "server" }
