# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-git-env"
version = "0.1.0"
description = "Git Environment for OpenEnv - task-based git operations via Gitea"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "smolagents>=1.0.0",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "git_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["git_env", "git_env.server"]
package-dir = { "git_env" = ".", "git_env.server" = "server" }
