# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-sumo-rl-env"
version = "0.1.0"
description = "SUMO-RL Environment for OpenEnv - traffic signal control via SUMO"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
    "gymnasium>=0.28",
    "pettingzoo>=1.24.3",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "sumolib>=1.14.0",
    "traci>=1.14.0",
    "sumo-rl>=1.4.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "sumo_rl_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["sumo_rl_env", "sumo_rl_env.server"]
package-dir = { "sumo_rl_env" = ".", "sumo_rl_env.server" = "server" }
